# fullstack-python-example

./: .env.test  .gitignore  README.md  pyproject.toml
app/: _modal.py  main.py  settings.py
app/items/: router.py  schemas.py  service.py
app/kit/: html.py  router.py  sqlite.py
app/models/: __init__.py  items.py
app/pages/: index.py  not_found.py
app/pages/items/: list.py  new.py  show.py
migrations/versions/: 2025_01_29_1911-81d5f4470747_initial_migration.py
tests/fixtures/: __init__.py  base.py  items.py  sqlite.py
